--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LoadedDiceOfLife/LoadedDiceSimulator#readme",
   "devDependencies": {
+    "css-loader": "^0.15.1",
     "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.1",
