--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/LoadedDiceOfLife/LoadedDiceSimulator#readme",
   "devDependencies": {
+    "bower": "^1.4.1",
+    "bower-webpack-plugin": "^0.1.8",
     "css-loader": "^0.15.1",
+    "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.1",
