--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
+    "underscore": "^1.8.3",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
   }
